Bug 1124099 - Make sure that we skip over scrollinfo layers properly with event-regions disabled. r=botond